--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
+# Core web framework
 Flask==1.1.1
 Jinja2==2.10.3
-gunicorn
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
-Cython>=0.29.23
-nltk==3.4.5
-pandas>=0.25.3
-requests==2.25.1
-scikit-learn==0.24.2
-scipy>=1.3.2
-spacy==3.1.2
+gunicorn
+
+# ML & NLP libraries
 numpy==1.19.5
+scipy==1.5.4                # Compatible with numpy 1.19.5
+pandas==1.1.5               # Latest compatible with numpy 1.19.5
+scikit-learn==0.24.2
+sklearn==0.0
+nltk==3.4.5
+spacy==3.1.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
+
+# Utility libraries
+requests==2.25.1
+Cython==0.29.23
 pickleshare==0.7.5
 chardet==3.0.4
-sklearn==0.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
